Implements clj-async-profiler allowing flamegraphs to be created.