@@ -1,6 +1,6 @@
 (defproject clj_bun_spreader "0.1.0-SNAPSHOT"
-  :description "FIXME: write description"
-  :url "http://example.com/FIXME"
+  :description "Clojure server for comparing against other languages."
+  :url "http://github.com/dawguy/blog"
   :license {:name "EPL-2.0 OR GPL-2.0-or-later WITH Classpath-exception-2.0"
             :url "https://www.eclipse.org/legal/epl-2.0/"}
   :dependencies [[org.clojure/clojure "1.11.1"]
@@ -14,6 +14,8 @@
                  [metosin/malli "0.11.0"]
                  [org.clojure/tools.logging "1.2.4"]
                  [nrepl "1.0.0"]
+                 [com.clojure-goes-fast/clj-async-profiler "1.0.3"]
                  ]
+  :jvm-opts ["-Djdk.attach.allowAttachSelf" "-XX:+UnlockDiagnosticVMOptions" "-XX:+DebugNonSafepoints"]
   :repl-options {:init-ns clj-bun-spreader.core}
   :main clj-bun-spreader.core)
